--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "antd": "^5.22.3",
     "axios": "^1.7.9",
     "cookie": "^1.0.2",
     "cors": "^2.8.5",
